<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.8">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_weight="0.5"/>

            <TextView
                android:layout_width="0dp"
                android:id="@+id/apellido"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/posicion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:layout_weight="0.5"/>

            <TextView
                android:id="@+id/onof"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/onof"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:onClick="OnClickEditar"
        android:id="@+id/editar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_weight="0.2"/>

</LinearLayout>
